--- a/1.thread_basic/2.locker_monitor.md
+++ b/1.thread_basic/2.locker_monitor.md
@@ -2,11 +2,17 @@
 
 ### 导读
 
-C\# 中，可以使用 lock 关键字和 Monitor 类来解决多线程锁定资源和死锁的问题。
+C# 中，可以使用 lock 关键字和 Monitor 类来解决多线程锁定资源和死锁的问题。
 
-> 官方解释：lock 语句获取给定对象的互斥 lock，执行语句块，然后释放 lock。
+<p>
+    <blockquote style="margin: 10px 0px; padding: 10px; border-left: 4px solid rgb(221, 221, 221); color: rgb(68, 68, 68); background-color: rgb(249, 249, 249); border-radius: 4px; font-size: 14px; overflow-wrap: break-word; font-family: "Helvetica Neue", 微软雅黑, "Microsoft Yahei", Helvetica, Arial, sans-serif;">
+官方解释：lock 语句获取给定对象的互斥 lock，执行语句块，然后释放 lock。
+    </blockquote>
+</p>
 
 下面我们将来探究 lock 关键字和 Monitor 类的使用。
+
+
 
 ## 1，Lock
 
@@ -14,9 +20,15 @@ lock 用于读一个引用类型进行加锁，同一时刻内只有一个线程
 
 Lock 锁定的对象，应该是静态的引用类型（字符串除外）。
 
- 实际上字符串也可以作为锁的对象使用，只是由于字符串对象的特殊性，可能会造成不同位置的不同线程冲突。  
- 如果你能保证字符串的唯一性，例如 Guid 生成的字符串，也是可以作为锁的对象使用的\(但不建议\)。  
- 锁的对象也不一定要静态才行，也可以通过类实例的成员变量，作为锁对象。
+<p>
+     <div style="color: rgb(23, 23, 23); font-family: &quot;Segoe UI&quot;, SegoeUI, &quot;Segoe WP&quot;, &quot;Helvetica Neue&quot;, Helvetica, Tahoma, Arial, sans-serif; background-color: rgb(255, 241, 204);border-radius: 10px;padding:20px;">
+实际上字符串也可以作为锁的对象使用，只是由于字符串对象的特殊性，可能会造成不同位置的不同线程冲突。<br />
+         如果你能保证字符串的唯一性，例如 Guid 生成的字符串，也是可以作为锁的对象使用的(但不建议)。
+         <br /> 锁的对象也不一定要静态才行，也可以通过类实例的成员变量，作为锁对象。
+</div>   
+</p>
+
+
 
 ### lock 原型
 
@@ -45,6 +57,8 @@ finally
 
 这里先不理会 Monitor，后面再说。
 
+
+
 ### lock 编写实例
 
 首先，如果像下面这样写的话，拉出去打 si 吧。
@@ -60,11 +74,13 @@ finally
         }
 ```
 
-![file](../.gitbook/assets/image-1587130109424.png)
+![file](./.images/image-1587130109424.png)
+
+
 
 下面编写一个简单的锁，示例如下：
 
-```text
+```C#
     class Program
     {
         private static object obj = new object();
@@ -113,6 +129,8 @@ finally
     }
 ```
 
+
+
 类将自己设置为锁， 这可以防止恶意代码对公共对象采用做锁。
 
 例如：
@@ -124,31 +142,42 @@ finally
      }
 ```
 
- 锁可以阻止其它线程执行锁块\(lock\(o\){}\)中的代码，当锁定时，其它线程必须等待锁中的线程执行完成并释放锁。但是这可能会给程序带来性能影响。  
-锁不太适合I/O场景，例如文件I/O，繁杂的计算或者操作比较持久的过程，会给程序带来很大的性能损失。
+
+
+<p>
+     <div style="color: rgb(23, 23, 23); font-family: &quot;Segoe UI&quot;, SegoeUI, &quot;Segoe WP&quot;, &quot;Helvetica Neue&quot;, Helvetica, Tahoma, Arial, sans-serif; background-color: rgb(255, 241, 204);border-radius: 10px;padding:20px;">
+锁可以阻止其它线程执行锁块(lock(o){})中的代码，当锁定时，其它线程必须等待锁中的线程执行完成并释放锁。但是这可能会给程序带来性能影响。<br />锁不太适合I/O场景，例如文件I/O，繁杂的计算或者操作比较持久的过程，会给程序带来很大的性能损失。
+</div>   
+</p>
 
 10 种优化锁的性能方法： [http://www.thinkingparallel.com/2007/07/31/10-ways-to-reduce-lock-contention-in-threaded-programs/](http://www.thinkingparallel.com/2007/07/31/10-ways-to-reduce-lock-contention-in-threaded-programs/)
+
+
+
+
 
 ## 2，Monitor
 
 此对象提供同步访问对象的机制；Monotor 是一个静态类型，其方法比较少，常用方法如下：
 
-| 操作 | 说明 |
-| :--- | :--- |
+| 操作             | 说明                                                         |
+| :--------------- | :----------------------------------------------------------- |
 | Enter， TryEnter | 获取对象的锁。 此操作还标记关键节的开头。 其他任何线程都不能输入临界区，除非它使用不同的锁定对象执行临界区中的说明。 |
-| Wait | 释放对象的锁，以允许其他线程锁定并访问对象。 调用线程会等待另一个线程访问对象。 使用脉冲信号通知等待线程关于对象状态的更改。 |
+| Wait             | 释放对象的锁，以允许其他线程锁定并访问对象。 调用线程会等待另一个线程访问对象。 使用脉冲信号通知等待线程关于对象状态的更改。 |
 | Pulse 、PulseAll | 将信号发送到一个或多个等待线程。 信号通知等待线程：锁定对象的状态已更改，锁的所有者已准备好释放该锁。 正在等待的线程置于对象的就绪队列中，因此它可能最终接收对象的锁。 线程锁定后，它可以检查对象的新状态，以查看是否已达到所需的状态。 |
-| Exit | 释放对象的锁。 此操作还标记受锁定对象保护的临界区的结尾。 |
+| Exit             | 释放对象的锁。 此操作还标记受锁定对象保护的临界区的结尾。    |
+
+
 
 ### 怎么用呢
 
 下面是一个很简单的示例：
 
-```text
+```C#
         private static object obj = new object();
         private static bool acquiredLock = false;
-
-        public static void Test()
+		
+		public static void Test()
         {
             try
             {
@@ -165,7 +194,9 @@ finally
 
 `Monitor.Enter` 锁定 obj 这个对象，并且设置 acquiredLock 为 true，告诉别人 obj 已经被锁定。
 
-最后结束时，判断 acquiredLock ，释放锁，并设置 acquiredLock 为 false。
+最后结束时，判断 acquiredLock ，释放锁，并设置 acquiredLock  为 false。
+
+
 
 ### 解释一下
 
@@ -177,11 +208,15 @@ Monitor 对象的 Enter 和 Exit 方法来标记临界区的开头和结尾。
 
 一般来说，lock 关键字够用了。
 
+
+
+
+
 ### 示例
 
 下面示范了多个线程如何使用 Monitor 来实现锁：
 
-```text
+```C#
        private static object obj = new object();
         private static bool acquiredLock = false;
         static void Main(string[] args)
@@ -235,6 +270,10 @@ Monitor 对象的 Enter 和 Exit 方法来标记临界区的开头和结尾。
         }
 ```
 
+
+
+
+
 ### 设置获取锁的时效
 
 如果对象已经被锁定，另一个线程使用 `Monitor.Enter` 对象，就会一直等待另一个线程解除锁定。
@@ -245,7 +284,7 @@ Monitor 对象的 Enter 和 Exit 方法来标记临界区的开头和结尾。
 
 改造上面的示例如下：
 
-```text
+```C#
         private static object obj = new object();
         private static bool acquiredLock = false;
         static void Main(string[] args)
@@ -301,6 +340,8 @@ Monitor 对象的 Enter 和 Exit 方法来标记临界区的开头和结尾。
             }
         }
 ```
+
+
 
 对于锁的使用，还有很多高级复杂的技术，本文简单地介绍了 Lock 和 Monitor 的使用。
 
