--- a/2.thread_sync/3.semaphore_semaphoreslim.md
+++ b/2.thread_sync/3.semaphore_semaphoreslim.md
@@ -6,34 +6,40 @@
 
 在本章中，我们从案例入手，通过示例代码，慢慢深入了解。
 
+
+
 ## Semaphore 类
 
 这里，先列出 Semaphore 类常用的 API。
 
 其构造函数如下：
 
-| 构造函数 | 说明 |
-| :--- | :--- |
-| Semaphore\(Int32, Int32\) | 初始化 Semaphore 类的新实例，并指定初始入口数和最大并发入口数。 |
-| Semaphore\(Int32, Int32, String\) | 初始化 Semaphore 类的新实例，并指定初始入口数和最大并发入口数，根据需要指定系统信号灯对象的名称。 |
-| Semaphore\(Int32, Int32, String, Boolean\) | 初始化 Semaphore 类的新实例，并指定初始入口数和最大并发入口数，还可以选择指定系统信号量对象的名称，以及指定一个变量来接收指示是否创建了新系统信号量的值。 |
+| 构造函数                                 | 说明                                                         |
+| ---------------------------------------- | ------------------------------------------------------------ |
+| Semaphore(Int32, Int32)                  | 初始化 Semaphore 类的新实例，并指定初始入口数和最大并发入口数。 |
+| Semaphore(Int32, Int32, String)          | 初始化 Semaphore 类的新实例，并指定初始入口数和最大并发入口数，根据需要指定系统信号灯对象的名称。 |
+| Semaphore(Int32, Int32, String, Boolean) | 初始化 Semaphore 类的新实例，并指定初始入口数和最大并发入口数，还可以选择指定系统信号量对象的名称，以及指定一个变量来接收指示是否创建了新系统信号量的值。 |
 
-Semaphore 使用纯粹的内核时间\(kernel-time\)方式\(等待时间很短\)，并且支持在不同的进程间同步线程\(像Mutex\)。
+Semaphore 使用纯粹的内核时间(kernel-time)方式(等待时间很短)，并且支持在不同的进程间同步线程(像Mutex)。
+
+
 
 Semaphore 常用方法如下：
 
-| 方法 | 说明 |
-| :--- | :--- |
-| Close\(\) | 释放由当前 WaitHandle占用的所有资源。 |
-| OpenExisting\(String\) | 打开指定名称为信号量（如果已经存在）。 |
-| Release\(\) | 退出信号量并返回前一个计数。 |
-| Release\(Int32\) | 以指定的次数退出信号量并返回前一个计数。 |
-| TryOpenExisting\(String, Semaphore\) | 打开指定名称为信号量（如果已经存在），并返回指示操作是否成功的值。 |
-| WaitOne\(\) | 阻止当前线程，直到当前 WaitHandle 收到信号。 |
-| WaitOne\(Int32\) | 阻止当前线程，直到当前 WaitHandle 收到信号，同时使用 32 位带符号整数指定时间间隔（以毫秒为单位）。 |
-| WaitOne\(Int32, Boolean\) | 阻止当前线程，直到当前的 WaitHandle 收到信号为止，同时使用 32 位带符号整数指定时间间隔，并指定是否在等待之前退出同步域。 |
-| WaitOne\(TimeSpan\) | 阻止当前线程，直到当前实例收到信号，同时使用 TimeSpan 指定时间间隔。 |
-| WaitOne\(TimeSpan, Boolean\) | 阻止当前线程，直到当前实例收到信号为止，同时使用 TimeSpan 指定时间间隔，并指定是否在等待之前退出同步域。 |
+| 方法                               | 说明                                                         |
+| ---------------------------------- | ------------------------------------------------------------ |
+| Close()                            | 释放由当前 WaitHandle占用的所有资源。                        |
+| OpenExisting(String)               | 打开指定名称为信号量（如果已经存在）。                       |
+| Release()                          | 退出信号量并返回前一个计数。                                 |
+| Release(Int32)                     | 以指定的次数退出信号量并返回前一个计数。                     |
+| TryOpenExisting(String, Semaphore) | 打开指定名称为信号量（如果已经存在），并返回指示操作是否成功的值。 |
+| WaitOne()                          | 阻止当前线程，直到当前 WaitHandle 收到信号。                 |
+| WaitOne(Int32)                     | 阻止当前线程，直到当前 WaitHandle 收到信号，同时使用 32 位带符号整数指定时间间隔（以毫秒为单位）。 |
+| WaitOne(Int32, Boolean)            | 阻止当前线程，直到当前的 WaitHandle 收到信号为止，同时使用 32 位带符号整数指定时间间隔，并指定是否在等待之前退出同步域。 |
+| WaitOne(TimeSpan)                  | 阻止当前线程，直到当前实例收到信号，同时使用 TimeSpan 指定时间间隔。 |
+| WaitOne(TimeSpan, Boolean)         | 阻止当前线程，直到当前实例收到信号为止，同时使用 TimeSpan 指定时间间隔，并指定是否在等待之前退出同步域。 |
+
+
 
 ### 示例
 
@@ -43,13 +49,15 @@ Semaphore 常用方法如下：
 
 new 实例化 Semaphore，并设置最大线程数、初始化时可进入线程数；
 
-使用 `.WaitOne();` 获取进入权限\(在获得进入权限前，线程处于阻塞状态\)。
+使用 `.WaitOne();` 获取进入权限(在获得进入权限前，线程处于阻塞状态)。
 
 离开时使用 `Release()` 释放占用。
 
 `Close()` 释放Semaphore 对象。
 
-《原子操作 Interlocked》 中的示例改进如下：
+
+
+ 《原子操作 Interlocked》 中的示例改进如下：
 
 ```csharp
     class Program
@@ -94,7 +102,7 @@ new 实例化 Semaphore，并设置最大线程数、初始化时可进入线程
 
             // 释放池
             _pool.Close();
-
+            
         }
 
         public static void AddOne(object n)
@@ -117,11 +125,15 @@ new 实例化 Semaphore，并设置最大线程数、初始化时可进入线程
     }
 ```
 
+
+
 看着代码有点多，快去运行一下，看看结果。
+
+
 
 ### 示例说明
 
-实例化 Semaphore 使用了`new Semaphore(0,3);` ，其构造函数原型为
+实例化 Semaphore 使用了`new Semaphore(0,3); ` ，其构造函数原型为
 
 ```csharp
 public Semaphore(int initialCount, int maximumCount);
@@ -155,14 +167,17 @@ maximumCount 表示最大允许几个线程进入资源池。
         }
 ```
 
+
+
 ### 信号量
 
 前面我们学习到 Mutex，这个类是全局操作系统起作用的。我们从 Mutex 和 Semphore 中，也看到了 信号量这个东西。
 
-信号量分为两种类型：本地信号量和命名系统信号量。
+信号量分为两种类型：本地信号量和命名系统信号量。 
 
 * 命名系统信号量在整个操作系统中均可见，可用于同步进程的活动。
-* 局部信号量仅存在于进程内。
+
+* 局部信号量仅存在于进程内。 
 
 当 name 为 null 或者为空时，Mutex 的信号量时局部信号量，否则 Mutex 的信号量是命名系统信号量。
 
@@ -181,13 +196,17 @@ Semaphore(Int32, Int32, String, Boolean)
 
 我们上面使用的示例就是局部信号量，进程中引用本地 Semaphore 对象的所有线程都可以使用。 每个 Semaphore 对象都是单独的本地信号量。
 
+
+
 ## SemaphoreSlim类
 
 SemaphoreSlim 跟 Semaphore 有啥关系？
 
 我看一下书再回答你。
 
-![file](../.gitbook/assets/image-1586681324216.png)
+![file](./.images/image-1586681324216.png)
+
+
 
 哦哦哦，微软文档说：
 
@@ -195,12 +214,16 @@ SemaphoreSlim 表示对可同时访问资源或资源池的线程数加以限制
 
 SemaphoreSlim 不使用信号量，不支持进程间同步，只能在进程内使用。
 
+
+
 它有两个构造函数：
 
-| 构造函数 | 说明 |
-| :--- | :--- |
-| SemaphoreSlim\(Int32\) | 初始化 SemaphoreSlim 类的新实例，以指定可同时授予的请求的初始数量。 |
-| SemaphoreSlim\(Int32, Int32\) | 初始化 SemaphoreSlim 类的新实例，同时指定可同时授予的请求的初始数量和最大数量。 |
+| 构造函数                    | 说明                                                         |
+| --------------------------- | ------------------------------------------------------------ |
+| SemaphoreSlim(Int32)        | 初始化 SemaphoreSlim 类的新实例，以指定可同时授予的请求的初始数量。 |
+| SemaphoreSlim(Int32, Int32) | 初始化 SemaphoreSlim 类的新实例，同时指定可同时授予的请求的初始数量和最大数量。 |
+
+
 
 ### 示例
 
@@ -270,23 +293,33 @@ SemaphoreSlim 不需要 `Close()`。
 
 两者在代码上的区别是就这么简单。
 
+
+
+
+
 ## 区别
 
-如果使用下面的构造函数实例化 Semaphor\(参数name不能为空\)，那么创建的对象在整个操作系统内都有效。
+如果使用下面的构造函数实例化 Semaphor(参数name不能为空)，那么创建的对象在整个操作系统内都有效。
 
-```csharp
+ ```csharp
 public Semaphore (int initialCount, int maximumCount, string name);
-```
+ ```
 
 Semaphorslim 则只在进程内内有效。
 
-SemaphoreSlim 类不会对 `Wait`、`WaitAsync` 和 `Release` 方法的调用强制执行线程或任务标识。
+
+
+SemaphoreSlim 类不会对 `Wait`、`WaitAsync` 和 `Release` 方法的调用强制执行线程或任务标识。 
 
 而 Semaphor 类，会对此进行严格监控，如果对应调用数量不一致，会出现异常。
 
- 此外，如果使用 SemaphoreSlim\(Int32 maximumCount\) 构造函数来实例化 SemaphoreSlim 对象，获取其 CurrentCount 属性，其值可能会大于 maximumCount。 编程人员应负责确保调用一个 Wait 或 WaitAsync 方法，便调用一个 Release。
+<p>
+    <div style="color: rgb(23, 23, 23); font-family: &quot;Segoe UI&quot;, SegoeUI, &quot;Segoe WP&quot;, &quot;Helvetica Neue&quot;, Helvetica, Tahoma, Arial, sans-serif; background-color: rgb(255, 241, 204);border-radius: 10px;padding:20px;">
+此外，如果使用 SemaphoreSlim(Int32 maximumCount) 构造函数来实例化 SemaphoreSlim 对象，获取其 CurrentCount 属性，其值可能会大于 maximumCount。 编程人员应负责确保调用一个 Wait 或 WaitAsync 方法，便调用一个 Release。
+</div>
+</p>
 
 这就好像笔筒里面的笔，没有监控，使用这使用完毕后，都应该将笔放进去。如果原先有10支笔，每次使用不放进去，或者将别的地方的笔放进去，那么最后数量就不是10了。
 
-![file](../.gitbook/assets/image-1587217831610.png)
 
+![file](./.images/image-1587217831610.png)
