--- a/1.thread_basic/3.pool.md
+++ b/1.thread_basic/3.pool.md
@@ -1,4 +1,14 @@
-# 3.1 线程池
+# 1.3 线程池
+
+全局队列本地队列
+
+线程池注入和爬山算法 https://mattwarren.org/2017/04/13/The-CLR-Thread-Pool-Thread-Injection-Algorithm/
+
+为什么有托管线程，还需要线程池，托管线程也需要 CLR GC，线程上下文切换需要时间、缓存失效
+
+![image-20220326094118503](images/image-20220326094118503.png)
+
+![image-20220326094054220](images/image-20220326094054220.png)
 
 ## 线程池
 
