--- a/2.thread_sync/9.SpinWait.md
+++ b/2.thread_sync/9.SpinWait.md
@@ -1,5 +1,7 @@
 # 2.9 自旋
 
+自旋和阻塞的区别自旋与阻塞有一些细微的差别。首先，非常短暂的自旋在条件可以很快得到满足的场景（例如几微秒）下是非常高效的，因为它避免了上下文切换带来的延迟和开销。.NET Core提供了一些特殊的辅助方法和类来进行这一操作，请参见http://albahari.com/threading/的SpinLock and SpinWait。其次，阻塞并非零开销。这是因为每一个线程在存活时会占用1 MB左右的内存，并对CLR和操作系统带来持续性的管理开销。因此，阻塞可能会给繁重的I/O密集型程序（例如要处理成百上千的并发操作）带来麻烦。这些程序更适于使用回调的方式，在等待时完全解除这些线程。我们将在后面讨论异步模式的时候介绍这种方法。
+
 前面我们学习了很多用于线程管理的 类型，也学习了多种线程同步的使用方法，这一篇主要讲述线程等待相关的内容。
 
 在笔者认真探究多线程前，只会`new Thread`；锁？`Lock`；线程等待？`Thread.Sleep()`。
@@ -11,6 +13,10 @@
 
 
 ### volatile 关键字
+
+![image-20220327132544351](images/image-20220327132544351.png)
+
+System.Threading.Volatile 、int 可以，long 不可用
 
 `volatile` 关键字指示一个字段可以由多个同时执行的线程修改。
 
@@ -345,3 +351,50 @@ SpinLock 的模板如下：
 ```
 
 结果为 28876，说明自旋 1000 次，大约需要 0.03 毫秒。
+
+### 【2.7】自旋和休眠
+
+当线程处于进入休眠状态或解除休眠状态时，会发生上下文切换，这就带来了昂贵的消耗。
+
+而线程不断运行，就会消耗 CPU 时间，占用 CPU 资源。
+
+
+
+对于过短的等待，应该使用自旋(spin)方法，避免发生上下文切换；过长的等待应该使线程休眠，避免占用大量 CPU 时间。
+
+我们可以使用最为熟知的 `Sleep()` 方法休眠线程。有很多同步线程的类型，也使用了休眠手段等待线程（已经写好草稿啦）。
+
+
+
+自旋的意思是，没事找事做。
+
+例如：
+
+```csharp
+        public static void Test(int n)
+        {
+            int num = 0;
+            for (int i=0;i<n;i++)
+            {
+                num += 1;
+            }
+        }
+```
+
+通过做一些简单的运算，来消耗时间，从而达到等待的目的。
+
+C# 中有关于自旋的自旋锁和 `Thread.SpinWait();` 方法，在后面的线程同步分类中会说到自旋锁。
+
+`Thread.SpinWait()` 在极少数情况下，避免线程使用上下文切换很有用。其定义如下
+
+```csharp
+public static void SpinWait(int iterations);
+```
+
+SpinWait 实质上是（处理器）使用了非常紧密的循环，并使用 `iterations` 参数指定的循环计数。 SpinWait 等待时间取决于处理器的速度。
+
+<p>
+    <div style="color: rgb(23, 23, 23); font-family: &quot;Segoe UI&quot;, SegoeUI, &quot;Segoe WP&quot;, &quot;Helvetica Neue&quot;, Helvetica, Tahoma, Arial, sans-serif; background-color: rgb(255, 241, 204);border-radius: 10px;padding:20px;">
+	SpinWait 无法使你准确控制等待时间，主要是使用一些锁时用到，例如 Monitor.Enter。 
+</div>
+</p>
