--- a/1.thread_basic/2.thread_model.md
+++ b/1.thread_basic/2.thread_model.md
@@ -56,7 +56,7 @@
 
 现代 CPU 的高速缓冲存储器一般分为三个级别 L1、L2、L3。
 
-![image-20220327152524746](images/image-20220327152524746.png)
+![image-20220327152524746](./images/image-20220327152524746.png)
 
 【图来自小林《图解操作系统》】
 
@@ -68,7 +68,7 @@
 
 在 Windows 中，可以通过任务管理器查看每级高速缓冲存储器已用空间。
 
-![image-20220327153359457](images/image-20220327153359457.png)
+![image-20220327153359457](./images/image-20220327153359457.png)
 
 在 Linux 中，我们也可以通过命令查看一个核心中 L1 Cache 的数据缓存和指令缓存空间大小：
 
@@ -96,7 +96,7 @@ whuanle@whuanle-PC:~$ cat /sys/devices/system/cpu/cpu0/cache/index3/size
 16384K
 ```
 
-![image-20220327211531022](images/image-20220327211531022.png)
+![image-20220327211531022](./images/image-20220327211531022.png)
 
 
 
@@ -118,7 +118,7 @@ whuanle@whuanle-PC:~$ cat /sys/devices/system/cpu/cpu0/cache/index3/size
 
 高速缓冲存储器的分级机制有利于 CPU 提前加载内存中的指令和数据，以及对要执行的指令进行预测，前面说到，频繁进行线程上下文切换，会导致缓存失效， CPU 需要频繁从内存中加载数据和指令到高速缓冲存储器。L1 的速度大约是 2-4 个时钟周期，而 L2 则是 10-20 个时钟周期，L3 是 20-60 个时钟周期，而内存(这里只指DRAM)则可能要上百个时钟周期。
 
-![image-20220327211555818](images/image-20220327211555818.png)
+![image-20220327211555818](./images/image-20220327211555818.png)
 
 注：笔者的内存是 PCIe® 3.0 DDR4，速度快。PCIe 2.0 或 DDR3 内存条会更加慢。
 
@@ -160,7 +160,7 @@ extern int pthread_create (pthread_t *__restrict __newthread,
 
 在很多书籍中，都会讨论到用户空间线程、内核线程、轻量级进程，在新版本的 Linux 内核中，通过 pthread 创建的线程都是内核线程，而这里我们不必想得太复杂，我们可以把使用线程库创建的线程称为原生线程，由操作系统管理。在 Windows 的任务管理器中，便可以看到原生线程的数量。
 
-![image-20220327213745505](images/image-20220327213745505.png)
+![image-20220327213745505](./images/image-20220327213745505.png)
 
 
 
@@ -189,7 +189,7 @@ pthread.h 头文件中，包含了如下功能：
 
 在 `new Thread` 时，CLR 会调用一个 `Initialize` 方法初始化一个 C++ Thread 对象。
 
-![image-20220327175223992](images/image-20220327175223992.png)
+![image-20220327175223992](./images/image-20220327175223992.png)
 
 
 
@@ -214,13 +214,13 @@ pthread.h 头文件中，包含了如下功能：
 
 具体的创建流程如下所示：
 
-![线程创建流程](images/线程创建流程.png)
+![线程创建流程](./images/线程创建流程.png)
 
 当执行到 `CreateNewOsThread` 函数时，开始真正创建一个操作系统线程。
 
 
 
-![image-20220327172520496](images/image-20220327172520496.png)
+![image-20220327172520496](./images/image-20220327172520496.png)
 
 
 
@@ -306,7 +306,7 @@ CLR 中关于创建线程的代码如下：
 
 下图中，左边是 Windows 的代码，右边是 Linux 代码。
 
-![image-20220327173212888](images/image-20220327173212888.png)
+![image-20220327173212888](./images/image-20220327173212888.png)
 
 
 
