--- a/1.thread_basic/2.thread_model.md
+++ b/1.thread_basic/2.thread_model.md
@@ -156,9 +156,15 @@ extern int pthread_create (pthread_t *__restrict __newthread,
 */
 ```
 
+> **[info] 提示**
+>
+> **POSIX线程**（POSIX Threads 常被缩写为 Pthreads）是 POSIX 的线程标准，定义了创建和操纵线程的一套API。
+>
+> 实现 POSIX 线程标准的库常被称作 **Pthreads**。
 
 
-在很多书籍中，都会讨论到用户空间线程、内核线程、轻量级进程，在新版本的 Linux 内核中，通过 pthread 创建的线程都是内核线程，而这里我们不必想得太复杂，我们可以把使用线程库创建的线程称为原生线程，由操作系统管理。在 Windows 的任务管理器中，便可以看到原生线程的数量。
+
+在很多书籍中，都会讨论到用户空间线程、内核线程、轻量级进程，在新版本的 Linux 内核中，通过 pthread 创建的线程都是内核线程，而这里我们不必想得太复杂，我们可以把使用线程库 POSIX Threads 创建的线程称为原生线程，由操作系统管理。在 Windows 的任务管理器中，便可以看到原生线程的数量。
 
 ![image-20220327213745505](./images/image-20220327213745505.png)
 
@@ -251,7 +257,7 @@ SIZE_T GetDefaultStackSizeSetting()
 
 
 
-而在 Unix 下，还要考虑栈空间大小与内存分页页面大小，如果空间大小小于内存页大小，那么与内存页大小为准。
+而在 Unix 类系统下，还要考虑栈空间大小与内存分页页面大小，如果空间大小小于内存页大小，那么以内存页大小为准。
 
 ```c
 
@@ -277,6 +283,8 @@ uint32_t GetOsPageSize()
 > **[info]** 提示
 >
 > 默认线程的栈空间的大小为 1MB。我们可以通过在 `new Thread()` 时设置 `maxStackSize` 。
+>
+> 在 Windows 中内存分配粒度是 64KB，而在 Linux 中需要按照 page 大小对齐，一般情况下都是 4kb。
 >
 > 在 Linux 中，你可以通过以下命令获取内存页大小。
 >
@@ -320,5 +328,122 @@ CLR 中关于创建线程的代码如下：
 
 
 
+### 线程消耗的堆栈空间
+
 通过这些步骤，你应该意识到 C# 中的线程与操作系统线程是一对一的关系。同时你也了解到，创建一个 Thread，需要这么多步骤，而且消耗类系统资源，因此在 .NET 并发编程中，我们要避免直接创建线程，而应该多使用线程池线程或 Task，避免创建和回收线程的开销。
 
+
+
+在 Windows 下， .NET 进程的内存布局如下：
+
+![image-20220329063238458](images/image-20220329063238458.png)
+
+【图来源《.NET 内存管理宝典》，图区分 CPU 字长，图左为 32位，图右是 64位】
+
+
+
+在前面，我们已经了解到，创建线程时，会创建 C# 的 Thread 实例、CLR 管理的 C++ Thread 实例，最后创建一个操作系统线程放到 CLR 中管理。其中，C# 创建的对象会在 GC heap 中，而 CLR heap 会管理用于其内部目的各种对象，如 C++ Thread。最后，图中有个 stack，这便是 CLR 进程中存放线程的堆栈区域，可以看到，stack 不止出现在低位地址，还可以出现在任意位置。
+
+
+
+线程的堆栈内存，除了供定义各种变量时使用，还需要存储函数的方法表等信息，此外，递归调用也是非常消耗内存空间的。下面我们通过一个示例来说明
+
+
+
+定义一个 64 字节的结构体。
+
+```csharp
+    public struct Test
+    {
+        public long A;
+        public long B;
+        public long C;
+        public long D;
+        public long E;
+        public long F;
+        public long G;
+        public long H;
+    }
+
+/*
+    static unsafe void Main(string[] args)
+    {
+        Console.WriteLine(sizeof(Test));	// 输出 64 
+        Console.ReadKey();
+    }
+*/
+```
+
+
+接下来，我们一个函数中，分配 730 大小的空间：
+
+```csharp
+    static void Main(string[] args)
+    {
+        new Thread(() =>
+        {
+            StackOver();
+        }, 64 * 1024)
+            .Start();
+        Console.ReadKey();
+    }
+
+    static unsafe void StackOver()
+    {
+        Test* test = stackalloc Test[730]; 		// 729 不会导致堆栈溢出
+    }
+
+```
+
+> **[info] 提示**
+>
+> `stackalloc` 用于在不安全代码中分配空间，如果是值类型，则分配堆栈；如果是引用类型，则分配到堆上。
+
+
+
+结果如图所示：
+
+![image-20220329070927419](images/image-20220329070927419.png)
+
+
+
+我们给这个线程设置的最大堆栈大小是 `64*1024` 字节即 64KB，但是我们只分配了 `64*730` ，线程的堆栈便溢出了！也就是说`1024-729=295` 个字节的空间被用于保存线程的寄存器以及方法表方法名称、参数等。
+
+所以，记住，给线程设置了堆栈大小，并不代表你定义变量时可以使用这么多的堆栈空间。
+
+
+
+另外，调用函数时，会消耗相当大的一部分堆栈空间。
+
+将上面的示例改成：
+
+```csharp
+    static void Main(string[] args)
+    {
+        new Thread(() =>
+        {
+            StackOver();
+        }, 64 * 1024)
+            .Start();
+        Console.ReadKey();
+    }
+
+    static void StackOver()
+    {
+        StackOver();
+    }
+```
+
+执行程序后，到 745 次，即会发生堆栈溢出。
+
+![image-20220329072022154](images/image-20220329072022154.png)
+
+
+
+这个函数什么都没有做，在 745 次递归调用中，约每次消耗 88 个字节的空间。
+
+
+
+堆栈是一种后进先出(LIFO)的数据结构，一个简化的线程堆栈示例如下：
+
+![image-20220329073441047](images/image-20220329073441047.png)
