--- a/1.thread_basic/2.thread_model.md
+++ b/1.thread_basic/2.thread_model.md
@@ -440,7 +440,7 @@ CLR 中关于创建线程的代码如下：
 
 
 
-这个函数什么都没有做，在 745 次递归调用中，约每次消耗 88 个字节的空间。
+这个函数什么都没有做，却把 64KB 的堆栈空间都耗尽了，在 745 次递归调用中，约每次消耗 88 个字节的空间。
 
 
 
